--- a/menu-inicial.css
+++ b/menu-inicial.css
@@ -30,10 +30,12 @@ a { color: #0000ee; }
 }
 
 .logo {
-  width: 40px;
-  height: 30px;
-  background: rgba(255,255,255,0.4);
-  
+  width: 48px;
+  height: 36px;
+  background-image: ("imagem_uma.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .user__avatar {
