--- a/servicos-matriculas.css
+++ b/servicos-matriculas.css
@@ -165,7 +165,7 @@ a { color: #0000ee; }
   font-weight: normal;
 }
 
-/* campo curso */
+
 .mat-field {
   max-width: 1100px;
   margin: 0 auto 12px;
@@ -187,7 +187,7 @@ a { color: #0000ee; }
   background: #fff;
 }
 
-/* subtítulo */
+
 .mat-subtitle {
   max-width: 1100px;
   margin: 22px auto 10px;
@@ -195,7 +195,7 @@ a { color: #0000ee; }
   color: #000;
 }
 
-/* caixa grande com conteúdo */
+
 .mat-box {
   max-width: 1100px;
   margin: 0 auto;
@@ -211,7 +211,7 @@ a { color: #0000ee; }
 }
 
 .mat-radio {
-  padding-top: 70px; /* para ficar mais ao centro como no print */
+  padding-top: 70px; 
 }
 .mat-radio input {
   width: 18px;
@@ -247,7 +247,7 @@ a { color: #0000ee; }
   color: #222;
 }
 
-/* botão azul canto inferior direito */
+
 .mat-actions {
   max-width: 1100px;
   margin: 18px auto 0;
@@ -273,7 +273,7 @@ a { color: #0000ee; }
   font-weight: bold;
 }
 
-/* Footer estilo InfoAlunos */
+
 .footer {
   margin-top: 14px;
   display: flex;
@@ -300,7 +300,7 @@ a { color: #0000ee; }
   background: #fff;
 }
 
-/* Responsivo */
+
 @media (width < 980px) {
   .mat-box__inner { grid-template-columns: 1fr; }
   .mat-radio { padding-top: 0; }
